--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -5,6 +5,8 @@
     max-width: 880px;
     margin-left: auto;
     margin-right: auto;
+    display: flex;
+    justify-content: space-between;
 }
 
 @media screen and (min-width: 880px) {
