--- a/src/blocks/welcome/__title/welcome__title.css
+++ b/src/blocks/welcome/__title/welcome__title.css
@@ -2,9 +2,20 @@
   font-family: "Inter", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 900;
-  font-size: 24px;
-  line-height: 29px;
+  font-size: 20px;
+  line-height: 24px;
   color: #ffff;
   margin-left: auto;
   margin-right: auto;
 }
+
+@media screen and (min-width: 400px) {
+  .welcome__title {
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 900;
+    line-height: 29px;
+    letter-spacing: 0em;
+  }
+}
+
