--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -7,6 +7,7 @@
     margin-right: auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 @media screen and (min-width: 880px) {
