--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,57 @@
 @import url(./blocks/tooltip/__text/tooltip__text.css);
 
 @import url(./blocks/error/error.css);
+
+.header__menu {
+  margin-right: 27px;
+  width: 24px;
+  height: 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.header__menu:hover {
+  opacity: 0.8;
+  transition: 0.3s;
+}
+
+.header__menu_opened {
+  display: none;
+}
+
+.menu__line {
+  background-color: #fff;
+  width: 100%;
+  height: 3px;
+  border-radius: 2px;
+}
+
+@media screen and (min-width: 880px) {
+  .header__menu {
+    display: none;
+  }
+}
+
+.burger {
+  width: 100%;
+  height: 180px;
+  border-bottom:  1px solid rgba(84, 84, 84, .7);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  opacity: 0;
+  transform: translateY(-100%);
+  transition: all 0.5s ease-out;
+
+}
+
+.burger_opened {
+  
+  opacity: 1;
+  transform: translateY(0);
+   
+}
