--- a/src/index.css
+++ b/src/index.css
@@ -73,8 +73,8 @@
 
 .header__menu {
   margin-right: 27px;
-  width: 24px;
-  height: 18px;
+  width: 35px;
+  height: 28px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -119,8 +119,40 @@
 }
 
 .burger_opened {
-  
   opacity: 1;
   transform: translateY(0);
-   
+}
+
+.line-first_clicked {
+  transform: rotate(45deg);
+  transition: all 0.8s linear;
+  transform-origin: 10% 0;
+}
+
+.line-second_clicked {
+  opacity: 0;
+  transition: opacity 0.6s ease-out;
+}
+
+.line-third_clicked {
+  transform: rotate(-45deg);
+  transition: all 0.8s ease-out;
+  transform-origin: -10% 0;
+}
+
+.line-first_unclicked {
+  transform: rotate(0);
+  transition: all 0.8s linear;
+  transform-origin: 10% 0;
+}
+
+.line-second_unclicked {
+  opacity: 1;
+  transition: opacity 1s ease-out;
+}
+
+.line-third_unclicked {
+  transform: rotate(0);
+  transition: all 0.8s ease-out;
+  transform-origin: -10% 0;
 }
